      given IPv4 address).  This has been specified for a long time,
      but was previously never implemented.  This is only supported by
      eventdns; servers now announce in their descriptors whether they
      support eventdns.
    - Specify and implement client-side SOCKS5 interface for reverse DNS
      lookups; see doc/socks-extensions.txt for full information.

  o Minor features:
    - Check for name servers (like Earthlink's) that hijack failing DNS
      requests and replace the no-such-server answer with a "helpful"
      redirect to an advertising-driven search portal.  We're a little
      clever about this, in order to work around DNS hijackers who
      "helpfully" decline to hijack known-invalid RFC2606 addresses.
      Config option "ServerDNSDetectHijacking 0" lets you turn it off.
    - When asked to resolve a hostname, don't use non-exit servers unless
      requested to do so.  This allows servers with broken DNS to
      be useful to the network.
    - Add an "EnforceDistinctSubnets" option to control our "exclude
      servers on the same /16" behavior.  It's still on by default; this
      is mostly for people who want to operate private test networks with
      all the machines on the same subnet.
    - If one of our entry guards is on the ExcludeNodes list, or the
      directory authorities don't think it's a good guard, treat it as if it
      were unlisted: stop using it as a guard, and throw it off the guards
      list if it stays that way for a long time.
    - Allow directory authorities to be marked separately as authorities for
      the v1 directory protocol, the v2 directory protocol, and as hidden
      service directories.  This should make it easier to migrate trust away
      from one of the two authorities currently running on Moria.

  o Security Fixes, minor:
    - If a client asked for a server by name, and we didn't have a
      descriptor for a named server with that name, we might return an
      old one.